--- a/index.html
+++ b/index.html
@@ -203,9 +203,10 @@
                 </div>
                 <div class="text-center md:text-left">
                     <h2 class="text-3xl font-bold text-white mb-2">Димитър Шейретов</h2>
-                    <p class="text-brand-purple font-bold uppercase text-sm mb-6">Founder & Audio Engineer</p>
+                    <p class="text-brand-purple font-bold uppercase text-sm mb-6">Основател и DJ</p>
+                    <p class="text-brand-purple font-bold uppercase text-sm mb-6">От пулта до площада</p>
                     <p class="text-gray-300 text-lg italic mb-8">
-                        "Моята работа е да бъда невидим. Когато публиката плаче на балада или скача на рок парче, без да мисли за микрофони и колони – тогава знам, че сме си свършили работата."
+                        "Тръгнах от малки партита и научих най-важния урок: никой не помни какви колони си ползвал, всички помнят как са се чувствали. Моята работа е да гарантирам това чувство. Днес мащабът е различен – сцени, екипи, камиони – но мисията ми е същата като в първия ден зад пулта: Да видя как публиката споделя един незабравим миг и просто се забавлява."
                     </p>
                     
                     <a href="https://www.facebook.com/dimitursheiretov96" target="_blank" class="inline-flex items-center text-white bg-[#1877F2] hover:bg-blue-700 px-6 py-3 rounded-lg font-bold transition-colors">
