--- a/index.html
+++ b/index.html
@@ -183,6 +183,38 @@
         </div>
     </section>
 
+    <section class="py-24 bg-brand-black border-t border-white/5">
+        <div class="max-w-4xl mx-auto px-4 text-center">
+            <div class="inline-flex items-center gap-2 py-1 px-4 rounded-full bg-[#1877F2]/10 border border-[#1877F2]/30 text-[#1877F2] text-sm font-bold tracking-widest mb-6 uppercase">
+                <i class="fab fa-facebook-f"></i> FACEBOOK FEED
+            </div>
+            
+            <h2 class="text-3xl md:text-5xl font-display font-bold text-white mb-6">Вижте какво правим сега</h2>
+            <p class="text-gray-400 mb-12">
+                Сцените се сменят всеки ден. Следете най-новите ни проекти, снимки от бекстейдж и предстоящи събития директно от нашата страница.
+            </p>
+
+            <div class="bg-white rounded-xl overflow-hidden shadow-2xl shadow-brand-purple/20 mx-auto" style="max-width: 500px;">
+                <iframe 
+                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fprofile.php%3Fid%3D61586241958048&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" 
+                    width="500" 
+                    height="600" 
+                    style="border:none;overflow:hidden; width:100%;" 
+                    scrolling="no" 
+                    frameborder="0" 
+                    allowfullscreen="true" 
+                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                </iframe>
+            </div>
+            
+            <div class="mt-8">
+                <a href="https://www.facebook.com/profile.php?id=61586241958048" target="_blank" class="text-gray-400 hover:text-brand-cyan transition-colors font-medium">
+                    Виж цялата страница <i class="fas fa-external-link-alt ml-2"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section class="py-16 bg-brand-black text-center">
         <div class="max-w-4xl mx-auto px-4">
             <h3 class="text-2xl font-bold text-white mb-8">Никое събитие не е твърде малко</h3>
