--- a/services.html
+++ b/services.html
@@ -18,6 +18,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/png" href="assets/Img/favicon.png">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sheyretovsound.com/">
+    <meta property="og:title" content="Sheyretov SOUND | Професионално Озвучаване">
+    <meta property="og:description" content="Накрай света да се обърне. Звук, светлина и сцени за събития в цяла България.">
+    <meta property="og:image" content="https://sheyretovsound.com/assets/Img/hero-crowd.jpg">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Sheyretov SOUND">
+    <meta name="twitter:description" content="Професионално техническо обезпечаване за вашите събития.">
+    <meta name="twitter:image" content="https://sheyretovsound.com/assets/Img/hero-crowd.jpg">
 </head>
 <body class="bg-brand-black text-white">
 
