--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <span class="w-2 h-2 rounded-full bg-brand-cyan animate-pulse"></span> Season 2025
             </div>
             <h1 class="text-4xl md:text-7xl font-display font-black text-white mb-6 leading-tight drop-shadow-2xl uppercase">
-                Накрай света <br>
+                Накарай света <br>
                 <span class="text-transparent bg-clip-text bg-gradient-to-r from-brand-cyan to-brand-purple">да се обърне</span>
             </h1>
             <p class="text-xl md:text-2xl text-gray-100 mb-10 max-w-3xl mx-auto font-medium shadow-black drop-shadow-md">
