--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,20 @@
     <footer class="bg-black border-t border-white/10 py-8 text-center text-gray-700 text-sm">
         <p>&copy; 2026 Sheyretov SOUND.</p>
     </footer>
-
+<div id="cookie-banner" class="fixed bottom-0 left-0 w-full bg-[#121212] border-t border-brand-cyan/30 p-4 z-[60] transform translate-y-full transition-transform duration-500 shadow-[0_-4px_20px_rgba(0,0,0,0.5)]">
+        <div class="max-w-7xl mx-auto flex flex-col sm:flex-row items-center justify-between gap-4">
+            <div class="flex items-center gap-3 text-center sm:text-left">
+                <i class="fas fa-cookie-bite text-brand-purple text-2xl hidden sm:block"></i>
+                <p class="text-gray-300 text-sm">
+                    Използваме бисквитки, за да анализираме трафика и да подобрим вашето преживяване.
+                </p>
+            </div>
+            <div class="flex gap-4">
+                <button id="accept-cookies" class="bg-brand-cyan text-black px-8 py-2 rounded font-bold hover:bg-cyan-300 transition-colors shadow-lg shadow-cyan-500/20 tracking-wider">
+                    ПРИЕМАМ
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
