Added Some more pictures

--- a/services.html
+++ b/services.html
@@ -185,7 +185,7 @@
 
     </div>
 
-    <section class="py-24 bg-brand-dark border-t border-white/5">
+  <section class="py-24 bg-brand-dark border-t border-white/5">
         <div class="max-w-7xl mx-auto px-4">
             <div class="text-center mb-12">
                 <h2 class="text-3xl md:text-5xl font-display font-bold text-white mb-4">Техниката, на която разчитаме</h2>
@@ -195,30 +195,30 @@
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                 
                 <div class="group relative aspect-square overflow-hidden rounded-xl">
-                    <img src="assets/Img/gear-console.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <img src="assets/Img/Pult.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                        <span class="text-white font-bold border border-brand-cyan px-4 py-2 rounded-full backdrop-blur-md">Consoles</span>
+                        <span class="text-white font-bold border border-brand-cyan px-4 py-2 rounded-full backdrop-blur-md">Digital Mixing</span>
                     </div>
                 </div>
 
                 <div class="group relative aspect-square overflow-hidden rounded-xl">
-                    <img src="assets/Img/gear-array.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <img src="assets/Img/Lighting.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                        <span class="text-white font-bold border border-brand-purple px-4 py-2 rounded-full backdrop-blur-md">Line Array</span>
+                        <span class="text-white font-bold border border-brand-purple px-4 py-2 rounded-full backdrop-blur-md">Line Array & FX</span>
                     </div>
                 </div>
 
                 <div class="group relative aspect-square overflow-hidden rounded-xl">
-                    <img src="assets/Img/gear-lights.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <img src="assets/Img/LightningArenaBurgas.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                        <span class="text-white font-bold border border-brand-cyan px-4 py-2 rounded-full backdrop-blur-md">Lighting</span>
+                        <span class="text-white font-bold border border-brand-cyan px-4 py-2 rounded-full backdrop-blur-md">Arena Atmosphere</span>
                     </div>
                 </div>
 
                 <div class="group relative aspect-square overflow-hidden rounded-xl">
-                    <img src="assets/Img/gear-mic.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <img src="assets/Img/HeadPhones.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
-                        <span class="text-white font-bold border border-brand-purple px-4 py-2 rounded-full backdrop-blur-md">Monitoring</span>
+                        <span class="text-white font-bold border border-brand-purple px-4 py-2 rounded-full backdrop-blur-md">Pro Monitoring</span>
                     </div>
                 </div>
 
