--- a/index.html
+++ b/index.html
@@ -112,21 +112,75 @@
         </div>
     </section>
 
-    <section class="py-24 bg-brand-dark border-t border-white/5">
+  <section class="py-24 bg-brand-dark border-t border-white/5">
         <div class="max-w-7xl mx-auto px-4">
-            <div class="flex flex-col md:flex-row gap-16 items-center">
-                <div class="w-full md:w-3/5 relative group">
-                    <div class="absolute -inset-1 bg-gradient-to-r from-brand-purple to-brand-cyan rounded-2xl blur opacity-20 group-hover:opacity-40 transition duration-1000"></div>
-                    <img src="assets/Img/primfest-stage.jpg" alt="Prim Fest Stage" class="relative rounded-xl shadow-2xl w-full">
+            
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-5xl font-display font-bold text-white mb-4">Нашите Специалности</h2>
+                <p class="text-gray-400 max-w-2xl mx-auto">
+                    Без значение дали е площад, стадион или бална зала – ние имаме точното решение.
+                </p>
+            </div>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                
+                <div class="group relative rounded-2xl overflow-hidden bg-brand-black border border-white/10 hover:border-brand-cyan/50 transition-all duration-300">
+                    <div class="h-64 overflow-hidden">
+                        <img src="assets/Img/laureati-carpet.jpg" alt="Общинско събитие" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent"></div>
+                    </div>
+                    <div class="absolute bottom-0 left-0 w-full p-6">
+                        <div class="mb-2">
+                            <span class="bg-brand-cyan text-black text-xs font-bold px-2 py-1 rounded uppercase tracking-wider">Мащаб</span>
+                        </div>
+                        <h3 class="text-2xl font-bold text-white mb-2">Общински Събития</h3>
+                        <p class="text-gray-300 text-sm mb-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            Празници на града, фолклорни събори и официални церемонии. Техническо обезпечаване без компромис.
+                        </p>
+                        <a href="portfolio.html" class="inline-flex items-center text-brand-cyan font-bold hover:text-white transition-colors">
+                            Виж Галерия <i class="fas fa-arrow-right ml-2"></i>
+                        </a>
+                    </div>
                 </div>
-                <div class="w-full md:w-2/5">
-                    <span class="text-brand-cyan font-bold tracking-widest uppercase mb-2 block">Фестивал</span>
-                    <h2 class="text-4xl md:text-6xl font-display font-black text-white mb-6">PRIM FEST 2025</h2>
-                    <p class="text-gray-400 text-lg mb-8">
-                        Голяма сцена. Отворено пространство. Нашата Line Array система осигури плътен и чист звук от първия до последния ред.
-                    </p>
-                    <a href="portfolio.html" class="text-white border-b border-brand-purple pb-1 hover:text-brand-purple transition-colors">Още снимки <i class="fas fa-arrow-right ml-2"></i></a>
+
+                <div class="group relative rounded-2xl overflow-hidden bg-brand-black border border-white/10 hover:border-brand-purple/50 transition-all duration-300">
+                    <div class="h-64 overflow-hidden">
+                        <img src="assets/Img/primfest-stage.jpg" alt="Фестивална Сцена" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent"></div>
+                    </div>
+                    <div class="absolute bottom-0 left-0 w-full p-6">
+                        <div class="mb-2">
+                            <span class="bg-brand-purple text-white text-xs font-bold px-2 py-1 rounded uppercase tracking-wider">Мощност</span>
+                        </div>
+                        <h3 class="text-2xl font-bold text-white mb-2">Фестивали</h3>
+                        <p class="text-gray-300 text-sm mb-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            Line Array системи, мащабни сцени и светлинни шоута за хиляди души публика.
+                        </p>
+                        <a href="portfolio.html" class="inline-flex items-center text-brand-purple font-bold hover:text-white transition-colors">
+                            Виж Проекти <i class="fas fa-arrow-right ml-2"></i>
+                        </a>
+                    </div>
                 </div>
+
+                <div class="group relative rounded-2xl overflow-hidden bg-brand-black border border-white/10 hover:border-pink-500/50 transition-all duration-300">
+                    <div class="h-64 overflow-hidden">
+                        <img src="assets/Img/wedding-main.jpg" alt="Сватбено тържество" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <div class="absolute inset-0 bg-gradient-to-t from-black via-black/50 to-transparent"></div>
+                    </div>
+                    <div class="absolute bottom-0 left-0 w-full p-6">
+                        <div class="mb-2">
+                            <span class="bg-pink-500 text-white text-xs font-bold px-2 py-1 rounded uppercase tracking-wider">Емоция</span>
+                        </div>
+                        <h3 class="text-2xl font-bold text-white mb-2">Сватби & Тържества</h3>
+                        <p class="text-gray-300 text-sm mb-4 opacity-0 group-hover:opacity-100 transition-opacity duration-300 transform translate-y-4 group-hover:translate-y-0">
+                            Кристален звук и декоративно осветление, които превръщат ресторанта в приказка.
+                        </p>
+                        <a href="portfolio.html" class="inline-flex items-center text-pink-500 font-bold hover:text-white transition-colors">
+                            Разгледай Снимки <i class="fas fa-arrow-right ml-2"></i>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
