--- a/services.html
+++ b/services.html
@@ -163,7 +163,7 @@
                 </ul>
             </div>
             <div class="w-full md:w-1/2 rounded-xl overflow-hidden shadow-2xl border border-white/10">
-                <img src="assets/Img/tech-setup.jpg" class="w-full h-80 object-cover">
+                <img src="assets/Img/tech-setup-night.jpg" class="w-full h-80 object-cover">
             </div>
         </div>
 
