--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </p>
                 <a href="services.html" class="inline-block text-brand-cyan font-bold hover:text-white transition-colors">Разгледай апаратурата <i class="fas fa-arrow-right ml-2"></i></a>
             </div>
-            <div class="h-[500px] md:h-auto bg-cover bg-center" style="background-image: url('assets/Img/tech-setup.jpg');"></div>
+            <div class="h-[500px] md:h-auto bg-cover bg-bottom" style="background-image: url('assets/Img/Pult.jpg');"></div>
         </div>
     </section>
 
