--- a/services.html
+++ b/services.html
@@ -195,7 +195,7 @@
             <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
                 
                 <div class="group relative aspect-square overflow-hidden rounded-xl">
-                    <img src="assets/Img/Pult.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                    <img src="assets/Img/tech-setup.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                     <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex items-center justify-center">
                         <span class="text-white font-bold border border-brand-cyan px-4 py-2 rounded-full backdrop-blur-md">Digital Mixing</span>
                     </div>
