--- a/portfolio.html
+++ b/portfolio.html
@@ -116,11 +116,70 @@
                 </div>
             </div>
 
+             <div class="group relative overflow-hidden rounded-xl h-80 lg:col-span-2">
+                <img src="assets/Img/IoniIVenko1.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Сватбата на Йони и Венко</h3>
+                </div>
+            </div>
+
+            <div class="group relative overflow-hidden rounded-xl h-80">
+                <img src="assets/Img/IoniIVenko2.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Сватбата на Йони и Венко</h3>
+                </div>
+            </div>
+
+             <div class="group relative overflow-hidden rounded-xl h-80">
+                <img src="assets/Img/HaskovoStage.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Хасково Главна Сцена</h3>
+                </div>
+            </div>
+
+              <div class="group relative overflow-hidden rounded-xl h-80">
+                <img src="assets/Img/ZlatinaIMilan1.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Сватба Златина И Милан</h3>
+                </div>
+            </div>
+
+            <div class="group relative overflow-hidden rounded-xl h-80">
+                <img src="assets/Img/KrushteneKseniq1.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Ксения Кръщене</h3>
+                </div>
+            </div>
+
+             <div class="group relative overflow-hidden rounded-xl h-80 lg:col-span-2">
+    <img src="assets/Img/ZlatinaIMilan2.jpg" class="w-full h-full object-cover object-top transition-transform duration-700 group-hover:scale-80">
+    
+    <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+        <h3 class="text-xl font-bold">Сватбата на Златина и Милан</h3>
+    </div>
+</div>
+
+ 
+
+  <div class="group relative overflow-hidden rounded-xl h-80 lg:col-span-2">
+                <img src="assets/Img/KseniqKrushtene2.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Ксения Кръщене</h3>
+                </div>
+            </div>
+
+             <div class="group relative overflow-hidden rounded-xl h-80">
+                <img src="assets/Img/Ubilei50G.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 to-transparent opacity-0 group-hover:opacity-100 transition-opacity flex items-end p-6">
+                    <h3 class="text-xl font-bold">Юбилей в Ресотрант La Veranda</h3>
+                </div>
+            </div>
+
         </div>
         
         <div class="mt-16 text-center">
             <h3 class="text-2xl font-bold mb-6">Искате вашето събитие да изглежда така?</h3>
-            <a href="index.html#contact" class="bg-brand-purple text-white font-bold py-4 px-8 rounded-full hover:bg-purple-600 transition-colors">
+            <a href="#contact" class="bg-brand-purple text-white font-bold py-4 px-8 rounded-full hover:bg-purple-600 transition-colors">
                 Свържете се с нас
             </a>
         </div>
