--- a/services.html
+++ b/services.html
@@ -185,6 +185,31 @@
 
     </div>
 
+    <section class="py-20 bg-gradient-to-b from-brand-black to-brand-dark border-t border-white/5">
+        <div class="max-w-4xl mx-auto px-4 text-center">
+            
+            <div class="inline-block mb-4">
+                <span class="bg-brand-purple/20 text-brand-purple border border-brand-purple/30 text-xs font-bold px-3 py-1 rounded-full uppercase tracking-wider animate-pulse">
+                    Ново Оборудване
+                </span>
+            </div>
+            
+            <h2 class="text-3xl md:text-4xl font-display font-bold text-white mb-6">
+                Постоянни иновации
+            </h2>
+            <p class="text-gray-400 mb-10 max-w-xl mx-auto">
+                Вижте интервюто на Димитър Шейретов за най-новата ни система. Ние не просто купуваме техника, ние инвестираме в качеството на вашето събитие.
+            </p>
+
+            <div class="flex justify-center">
+                <div class="relative rounded-2xl overflow-hidden shadow-[0_0_40px_rgba(168,85,247,0.15)] border border-white/10 group hover:border-brand-purple/50 transition-colors">
+                    <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2Freel%2F2079386416176079%2F&show_text=false&width=267&t=0" width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
   <section class="py-24 bg-brand-dark border-t border-white/5">
         <div class="max-w-7xl mx-auto px-4">
             <div class="text-center mb-12">
