--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                     <h3 class="text-2xl font-bold text-white group-hover:text-brand-cyan transition-colors">Георги Ценев</h3>
                     <p class="text-brand-cyan text-sm font-bold uppercase mb-4 tracking-wider">Light Operator</p>
                     <p class="text-gray-400 text-sm leading-relaxed">
-                        "Влага цвят в ритъма. Неговото осветление превръща обикновена зала в истински спектакъл и допълва всяка нота със светлина."
+                        "Влага правилният фокус в ритъма. Неговото осветление превръща обикновена зала в истински спектакъл и допълва всяка нота със светлина."
                     </p>
                 </div>
 
