--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
 
                  <div class="group bg-white/5 rounded-xl p-6 border border-white/5 hover:border-brand-cyan/50 transition-all duration-300">
                     <div class="relative overflow-hidden rounded-lg mb-6 aspect-square border-2 border-transparent group-hover:border-brand-cyan/30 transition-all">
-                        <img src="assets/Img/georgi.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
+                        <img src="assets/Img/georgicover.jpg" class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
                         <div class="absolute top-3 right-3 bg-black/80 backdrop-blur-md px-3 py-2 rounded-lg border border-white/10 group-hover:border-brand-cyan/50 transition-colors shadow-xl">
                             <i class="fas fa-lightbulb text-brand-purple text-lg"></i>
                         </div>
