Changed Founder Pic and sizing of it

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
         <p class="text-gray-400 max-w-2xl mx-auto">От един пулт до най-големите сцени в България.</p>
     </div>
 
-    <section class="py-12">
+  <section class="py-12">
         <div class="max-w-4xl mx-auto px-4">
             <div class="bg-brand-dark rounded-3xl p-8 md:p-12 border border-white/10">
                 <h3 class="text-2xl font-bold text-brand-cyan mb-6">"Емоцията е моето гориво"</h3>
@@ -76,7 +76,7 @@
                         "Всеки проект за мен е история, която трябва да бъде усетена, не просто чута. Когато клиентът каже „точно това търсих“, знам, че съм си свършил работата."
                     </p>
                     <div class="flex items-center gap-4 mt-8 pt-8 border-t border-white/5">
-                        <img src="assets/Img/founder.jpg" class="w-16 h-16 rounded-full object-cover border-2 border-brand-purple">
+                        <img src="assets/Img/founder.jpg" class="w-16 h-16 rounded-full object-cover object-top border-2 border-brand-purple">
                         <div>
                             <span class="block text-white font-bold">Димитър Шейретов</span>
                             <span class="text-sm text-gray-500 uppercase">Основател</span>
