--- a/index.html
+++ b/index.html
@@ -190,10 +190,14 @@
     <section id="team" class="py-24 bg-gradient-to-b from-brand-dark to-brand-black">
         <div class="max-w-5xl mx-auto px-4">
             <div class="bg-white/5 rounded-3xl p-8 md:p-12 border border-white/10 flex flex-col md:flex-row items-center gap-10">
-                <div class="w-48 h-48 md:w-64 md:h-64 flex-shrink-0 relative">
-                    <div class="absolute inset-0 bg-brand-cyan blur-2xl opacity-20 rounded-full"></div>
-                    <img src="assets/Img/founder.jpg" alt="Димитър Шейретов" class="w-full h-full object-cover rounded-full border-4 border-brand-cyan shadow-xl relative z-10">
-                </div>
+            <div class="w-64 h-96 flex-shrink-0 relative group">
+    
+    <div class="absolute inset-0 bg-brand-cyan blur-2xl opacity-20 rounded-2xl group-hover:opacity-40 transition-opacity duration-500"></div>
+    
+    <img src="assets/Img/founder.jpg" 
+         alt="Димитър Шейретов" 
+         class="w-full h-full object-cover object-top rounded-2xl border-2 border-brand-cyan/50 shadow-2xl relative z-10">
+</div>
                <div class="text-center md:text-left">
                     <h2 class="text-3xl font-bold text-white mb-2">Димитър Шейретов</h2>
                     <p class="text-brand-purple font-bold uppercase text-sm mb-6">Founder & Audio Engineer</p>
