--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 <div>
                     <a href="https://ginkogrudev.com" target="_blank" class="group relative inline-flex items-center gap-3 bg-gray-900 border border-white/10 px-6 py-3 rounded-full hover:border-white/30 transition-all duration-300">
                         <span class="text-gray-400 group-hover:text-white transition-colors font-medium">
-                            Искаш такъв Уебсайт?
+                            Искаш такъв Сайт?
                         </span>
                         <span class="bg-gradient-to-r from-pink-500 to-blue-500 text-white font-bold px-3 py-1 rounded-full text-xs shadow-lg shadow-pink-500/20 group-hover:shadow-blue-500/40 transition-all">
                             GG Solutions
