--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         </a>
 
                         <a href="about.html" class="inline-flex items-center justify-center text-white bg-brand-purple hover:bg-purple-600 px-6 py-3 rounded-lg font-bold transition-colors shadow-lg shadow-purple-500/20">
-                            <i class="fas fa-users mr-2"></i> Виж целия екип
+                            <i class="fas fa-users mr-2"></i> Виж целия колектив
                         </a>
                         
                     </div>
@@ -342,7 +342,7 @@
                 </div>
 
                 <div class="flex flex-col items-center md:items-end justify-start">
-                    <h4 class="text-white font-bold mb-4 uppercase text-sm tracking-wider md:text-right">Готови ли сте?</h4>
+                    <h4 class="text-white font-bold mb-4 uppercase text-sm tracking-wider md:text-right">Готови ли сте за новото събитие?</h4>
                     <a href="tel:0888502811" class="bg-brand-cyan text-black font-bold py-4 px-8 rounded hover:bg-cyan-400 transition-colors shadow-lg shadow-cyan-500/20 w-full md:w-auto text-center">
                         ОБАДИ СЕ СЕГА
                     </a>
