--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
                         "Всеки проект за мен е история, която трябва да бъде усетена, не просто чута. Когато клиентът каже „точно това търсих“, знам, че съм си свършил работата."
                     </p>
                     <div class="flex items-center gap-4 mt-8 pt-8 border-t border-white/5">
-                        <img src="assets/Img/founder.jpg" class="w-16 h-16 rounded-full object-cover object-top border-2 border-brand-purple">
+                        <img src="assets/Img/founderdimitursheyretov.jpg" class="w-16 h-16 rounded-full object-cover object-top border-2 border-brand-purple">
                         <div>
                             <span class="block text-white font-bold">Димитър Шейретов</span>
                             <span class="text-sm text-gray-500 uppercase">Основател</span>
