--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     
     <div class="absolute inset-0 bg-brand-cyan blur-2xl opacity-20 rounded-2xl group-hover:opacity-40 transition-opacity duration-500"></div>
     
-    <img src="assets/Img/founder.jpg" 
+    <img src="assets/Img/founderdimitursheyretov.jpg" 
          alt="Димитър Шейретов" 
          class="w-full h-full object-cover object-top rounded-2xl border-2 border-brand-cyan/50 shadow-2xl relative z-10">
 </div>
